    - pulsemanager.cpp: reformat only.
    - pulsemanager.{cpp,h}: switch port definitions to std::uint16_t.
    - pulsemanager.h: add std:: namespace selector for uint32_t version
      variables.
    - pulsemanager.{cpp,h}: add ESD support.
    - pulsemanager.{cpp,h}: rename relaunch () to restart ().
    - pulsemanager.cpp: reformat only.
    - pulsemanager.{cpp,h}: fixup preprocessor usage.

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.5.1):
    - xsettingswidget: compile only on Windows.
    - Add support for new style command line options of xfreerdp on direct RDP
      connections. (Fixes: #772).
    - Replace "::" with "_" for the desktop link name on Windows.

  [ Mike Gabriel ]
  * New upstream release (4.0.5.1):
    - xinerama.conf: Don't choke if screen coordintate lines in xinerama.conf
      start with a dash ("-"). (Fixes: #948).

 -- X2Go Release Manager <git-admin@x2go.org>  Tue, 28 Jul 2015 06:05:27 +0200

x2goclient (4.0.5.0-0x2go1) unstable; urgency=low

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.0):
    - INSTALL: add more verbose instructions on how to build X2Go Client and
      friends.
    - onmainwindow.{cpp,h}: rename slotScDaemonOut() and slotScDaemonError()
      to slotScDaemonStdOut() and slotScDaemonStdErr(). I will need
      slotScDaemonError() later and the previous names were a bit of a
      misnomer.
    - x2goutils.{cpp,h}: add new show_RichText_Generic_MsgBox() main function
      designed to replace the show_RichText_WarningMsgBox() function.
    - x2goutils.{cpp,h}: make show_RichText_WarningMsgBox() use
      show_RichText_Generic_MsgBox ().
    - x2goutils.{cpp,h}: new show_RichText_ErrorMsgBox() function as a wrapper
      for show_RichText_Generic_MsgBox() with a critical icon.
    - onmainwindow.{cpp,h}: properly handle scdaemon errors with a message box
      and close the client.
    - onmainwindow.cpp: manipulate PATH and append /usr/lib/gnupg2/ to it when
      starting scdaemon. Fixes: #882.